--- a/FARC - Sugeno/FARC - Sugeno/nbproject/project.properties
+++ b/FARC - Sugeno/FARC - Sugeno/nbproject/project.properties
@@ -34,9 +34,11 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.FARC-HD-Choquet-src=../FARC-HD-Choquet/src
+file.reference.flanagan.jar=../../flanagan.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.flanagan.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=-J-Xms2048m
 javac.deprecation=false
