--- a/FarcOriginal/FarcOriginal/nbproject/project.properties
+++ b/FarcOriginal/FarcOriginal/nbproject/project.properties
@@ -40,6 +40,7 @@ javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.external.vm=false
 javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
@@ -56,6 +57,7 @@ javac.test.processorpath=\
 javadoc.additionalparam=
 javadoc.author=false
 javadoc.encoding=${source.encoding}
+javadoc.html5=false
 javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
@@ -64,6 +66,8 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+jlink.launcher=false
+jlink.launcher.name=FarcOriginal
 main.class=FARCHD.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
